--- a/publications.bib
+++ b/publications.bib
@@ -1,15 +1,138 @@
-@article{aef61b4a3fbe443e9f49452cd8655e1b,
-title = "Probabilistic forecasts using expert judgment: the road to recovery from COVID-19",
-abstract = "The COVID-19 pandemic has had a devastating effect on many industries around the world including tourism and policy makers are interested in mapping out what the recovery path will look like. We propose a novel statistical methodology for generating scenario-based probabilistic forecasts based on a large survey of 443 tourism experts and stakeholders. The scenarios map out pessimistic, most-likely and optimistic paths to recovery. Taking advantage of the natural aggregation structure of tourism data due to geographic locations and purposes of travel, we propose combining forecast reconciliation and forecast combinations implemented to historical data to generate robust COVID-free counterfactual forecasts, to contrast against. Our empirical application focuses on Australia, analyzing international arrivals and domestic flows. Both sectors have been severely affected by travel restrictions in the form of international and interstate border closures and regional lockdowns. The two sets of forecasts, allow policy makers to map out the road to recovery and also estimate the expected effect of the pandemic.",
-keywords = "forecasting, judgmental, probabilistic, scenarios, survey",
-author = "George Athanasopoulos and Hyndman, {Rob J.} and Nikolaos Kourentzes and Mitchell O{\textquoteright}Hara-Wild",
-note = "Publisher Copyright: {\textcopyright} The Author(s) 2022.",
-year = "2022",
-doi = "10.1177/00472875211059240",
-language = "English",
-journal = "Journal of Travel Research",
-issn = "0047-2875",
-publisher = "SAGE Publications Ltd",
-
+@article{pontoh2020effectiveness,
+  title={Effectiveness of the public health measures to prevent the spread of covid-19},
+  author={Pontoh, Resa Septiani and Toharudin, Toni and Zahroh, Solichatus and Supartini, Enny},
+  journal={Commun. Math. Biol. Neurosci.},
+  volume={2020},
+  pages={Article--ID},
+  year={2020}
 }
- 
+
+@inproceedings{zahroh2019modeling,
+  title={Modeling and forecasting daily temperature in Bandung},
+  author={Zahroh, Solichatus and Hidayat, Yuyun and Pontoh, Resa Septiani and Santoso, Agus and Sukono, F and Bon, AT},
+  booktitle={Proceedings of the international conference on industrial engineering and operations management Riyadh, Saudi Arabia},
+  pages={406--412},
+  year={2019}
+}
+
+@article{toharudin2020impact,
+  title={Impact of large scale social restriction on the COVID-19 cases in East Java},
+  author={Toharudin, Toni and Pontoh, Resa Septiani and Zahroh, Solichatus and Akbar, Anthony and Sunengsih, Neneng},
+  journal={Commun. Math. Biol. Neurosci.},
+  volume={2020},
+  pages={Article--ID},
+  year={2020}
+}
+
+@inproceedings{zahroh2021education,
+  title={Education as an important aspect to determine human development index by province in Indonesia},
+  author={Zahroh, S and Pontoh, RS},
+  booktitle={Journal of Physics: Conference Series},
+  volume={1722},
+  number={1},
+  pages={012106},
+  year={2021},
+  organization={IOP Publishing}
+}
+
+@inproceedings{pontoh2021causal,
+  title={Causal impact of PSBB and new normal in West Java},
+  author={Pontoh, RS and Zahroh, S and Sunengsih, N},
+  booktitle={Journal of Physics: Conference Series},
+  volume={1722},
+  number={1},
+  pages={012088},
+  year={2021},
+  organization={IOP Publishing}
+}
+
+@article{toharudin2023employing,
+  title={Employing long short-term memory and Facebook prophet model in air temperature forecasting},
+  author={Toharudin, Toni and Pontoh, Resa Septiani and Caraka, Rezzy Eko and Zahroh, Solichatus and Lee, Youngjo and Chen, Rung Ching},
+  journal={Communications in Statistics-Simulation and Computation},
+  volume={52},
+  number={2},
+  pages={279--290},
+  year={2023},
+  publisher={Taylor \& Francis}
+}
+
+@article{pontoh2020sukono,
+  title={Sukono, Covid-19 modelling in South Korea using a time series approach},
+  author={Pontoh, RS and Solichatus, Z and Hidayat, Y and Aldella, R and Jiwani, NM},
+  journal={Int. J. Adv. Sci. Technol},
+  volume={29},
+  number={7},
+  pages={1620--1632},
+  year={2020}
+}
+
+@inproceedings{pontoh2021applied,
+  title={Applied of feed-forward neural network and facebook prophet model for train passengers forecasting},
+  author={Pontoh, Resa Septiani and Zahroh, S and Nurahman, HR and Aprillion, RI and Ramdani, A and Akmal, DI},
+  booktitle={Journal of physics: Conference series},
+  volume={1776},
+  number={1},
+  pages={012057},
+  year={2021},
+  organization={IOP Publishing}
+}
+
+@inproceedings{pontoh2021new,
+  title={New normal policy on the Rupiah exchange rate using Long Short-Term Memory},
+  author={Pontoh, RS and Zahroh, S and Sunengsih, N},
+  booktitle={Journal of Physics: Conference Series},
+  volume={1863},
+  number={1},
+  pages={012063},
+  year={2021},
+  organization={IOP Publishing}
+}
+
+@article{pontoh2021children,
+  title={Children mental health in Bandung during COVID-19 pandemic: a cross-sectional study},
+  author={Pontoh, Resa Septiani and Zahroh, Solichatus and Akbar, Antony and Jiwani, Nabila Mahardika and Sunengsih, Neneng},
+  journal={Commun. Math. Biol. Neurosci.},
+  volume={2021},
+  pages={Article--ID},
+  year={2021}
+}
+
+@article{zahroh2020indonesian,
+  title={Indonesian Rupiah exchange rate in facing COVID-19 (A time series-machine learning approach)},
+  author={Zahroh, S and Pontoh, RS and Hidayat, Y and Firman, S},
+  journal={J. Adv. Res. Dyn. Control Syst},
+  volume={12},
+  pages={862--872},
+  year={2020}
+}
+
+@article{toharudin2021national,
+  title={National vaccination and local intervention impacts on covid-19 cases},
+  author={Toharudin, Toni and Pontoh, Resa Septiani and Caraka, Rezzy Eko and Zahroh, Solichatus and Kendogo, Panji and Sijabat, Novika and Sari, Mentari Dara Puspita and Gio, Prana Ugiana and Basyuni, Mohammad and Pardamean, Bens},
+  journal={Sustainability},
+  volume={13},
+  number={15},
+  pages={8282},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{pontoh2021clustering,
+  title={Clustering of fishery management areas based on the level of utilization in Indonesia},
+  author={Pontoh, Resa Septiani and Salsabila, Fanny and Garini, Farin Cyntiya and Fatharani, Rahmalisa Aulia and Zahroh, Solichatus and Supartini, Enny},
+  journal={Commun. Math. Biol. Neurosci.},
+  volume={2021},
+  pages={Article--ID},
+  year={2021}
+}
+
+@article{purwandari2022forecasting,
+  title={Forecasting model of COVID-19 pandemic in Malaysia: An application of time series approach using neural network},
+  author={Purwandari, T and Zahroh, S and Hidayat, Y and Sukonob, S and Mamat, M and Saputra, J},
+  journal={Decision Science Letters},
+  volume={11},
+  number={1},
+  pages={35--42},
+  year={2022}
+}
