--- a/publications.bib
+++ b/publications.bib
@@ -58,8 +58,8 @@
 }
 
 @article{pontoh2020sukono,
-  title={Sukono, Covid-19 modelling in South Korea using a time series approach},
-  author={Pontoh, RS and Solichatus, Z and Hidayat, Y and Aldella, R and Jiwani, NM},
+  title={Covid-19 modelling in South Korea using a time series approach},
+  author={Sukono, Pontoh, RS and Solichatus, Z and Hidayat, Y and Aldella, R and Jiwani, NM},
   journal={Int. J. Adv. Sci. Technol},
   volume={29},
   number={7},
